# SmartLog_AI

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conda.yml  logging.ini  main_mvp.py  pyproject.toml  requirements.txt  setup.py  test_audio.py
scripts/: clear_caches.sh  clear_everything.sh
src/: audio.py  main_mvp.py
src/ai/: smart_summarizer.py  stt_engine.py  summarization.py  vosk_transcriber.py
src/audio/: capture.py
src/gui/: ui_tk.py
src/utils/: buffer.py  logger.py  power.py
tests/: conftest.py  pytest.ini  test_audio.py  test_dummy.py  test_end_to_end.py  test_smart_summarizer.py  test_stt.py  test_tkinter_ui.py
